# optitrader

./: .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  assets_with_nulls.sql  docker-compose.yml  market.db  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  publish.yml  test.yml
fixtures/cassettes/tests/market/cassettes/: test_get_yahoo_asset_failure.yaml
src/optifolio/: __init__.py  api.py  app.py  backtester.py  cli.py  config.py  investment_universe.py  main.py  portfolio.py
src/optifolio/app/: 1_🏠_Home.py  __init__.py  about.py  account.py  backtester.py  explore.py  home.py  page.py  session_manager.py
src/optifolio/app/pages/: 2_💼_Account.py  2_📈_Backtester.py  3_🗺️_Explore.py  4_💼_Account.py  4_📈_Backtester.py  5_👨🏻‍💻_About.py  5_💻_About.py
src/optifolio/enums/: __init__.py  backtester.py  iterable.py  market.py  optimization.py
src/optifolio/market/: __init__.py  alpaca_market_data.py  base_data_provider.py  enums.py  finnhub_market_data.py  investment_universe.py  market_data.py  news.py  trading.py  yahoo_market_data.py
src/optifolio/market/db/: database.py  models.py
src/optifolio/market/db/scripts/: add_asset.py  create_assets_table.py  update_number_of_shares.py
src/optifolio/models/: __init__.py  asset.py  optimization.py
src/optifolio/optimization/: constraints.py  objectives.py  solver.py
src/optifolio/utils/: __init__.py  utils.py
src/optitrader/: __init__.py  api.py  backtester.py  cli.py  config.py  main.py  portfolio.py
src/optitrader/app/: 1_🏠_Home.py  __init__.py  about.py  account.py  backtester.py  explore.py  home.py  page.py  session_manager.py  session_manager.py.aeacae1dba05799ae3b187801467b414.tmp
src/optitrader/app/pages/: 2_📈_Backtester.py  3_🗺️_Explore.py  4_💼_Account.py  5_👨🏻‍💻_About.py
src/optitrader/enums/: __init__.py  backtester.py  iterable.py  market.py  optimization.py
src/optitrader/market/: __init__.py  alpaca_market_data.py  alpaca_market_data.py.9fafeb33ede105e202d2a274793d58ee.tmp  base_data_provider.py  finnhub_market_data.py  investment_universe.py  market_data.py  market_data.py.185a99388c8a3ef51cc2541e94dbdc63.tmp  news.py  trading.py  yahoo_market_data.py
src/optitrader/market/db/: database.py  database.py.7b38a0f9e78f0ef64524afe7b2c0c608.tmp  models.py
src/optitrader/market/db/scripts/: add_asset.py  create_assets_table.py  update_number_of_shares.py
src/optitrader/models/: __init__.py  asset.py  base.py  optimization.py  optimization.py.0f97aab178a762049bd1442f7826f63f.tmp
src/optitrader/optimization/: constraints.py  objectives.py  solver.py
src/optitrader/utils/: __init__.py  utils.py
tests/: __init__.py  conftest.py  conftest.py.9e716247d665a1fbc3f8dc8da70e16e8.tmp  test_api.py  test_app.py  test_backtester.py  test_cli.py  test_enums.py  test_import.py  test_main.py  test_portfolio.py  test_portfolio.py.ac267fcdff569dd7296bb880cc152142.tmp
tests/app/: test_app.py  test_page.py  test_session_manager.py
tests/app/cassettes/: test_display_financials.yaml  test_display_news.yaml  test_display_trader_portfolio.yaml  test_run_optimization.yaml
tests/cassettes/: test_compute_history_values.yaml  test_get_assets_df.yaml  test_get_bars.yaml  test_optifolio_cvar.yaml  test_optifolio_cvar_tickers.yaml  test_optifolio_cvar_universe.yaml  test_optitrader_cvar.yaml  test_optitrader_cvar_tickers.yaml  test_portfolio_from_solver.yaml  test_portfolio_get_holdings_df.yaml  test_portfolio_history_plot.yaml  test_post_optimization_with_fixed_dates.yaml
tests/cassettes/tests/market/cassettes/: test_get_yahoo_asset_failure.yaml
tests/integration/: __init__.py  test_example.py
tests/integration/cassettes/: test_optifolio_example_faang.yaml  test_optifolio_example_readme.yaml  test_optitrader_example_faang.yaml  test_optitrader_example_readme.yaml
tests/market/: test_alpaca_market_data.py  test_finnhub_market_data.py  test_investment_universe.py  test_market_data.py  test_market_data.py.cc11b850da70d338532581e7517d00fb.tmp  test_news.py  test_trading.py  test_yahoo_market_data.py
tests/market/cassettes/: test_get_account_portfolio_history.yaml  test_get_asset.yaml  test_get_asset_by_name.yaml  test_get_asset_nodb.yaml  test_get_asset_profile.yaml  test_get_assets_df.yaml  test_get_assets_from_provider.yaml  test_get_bars.yaml  test_get_companies_profiles.yaml  test_get_companies_with_sleep.yaml  test_get_financials.yaml  test_get_get_asset_from_ticker_nodb.yaml  test_get_get_asset_nodb.yaml  test_get_market_caps.yaml  test_get_news_between_dates.yaml  test_get_orders_df.yaml  test_get_tradable_tickers.yaml  test_get_yahoo_asset.yaml  test_get_yahoo_asset_failure.yaml  test_invest_in_portfolio.yaml  test_investment_universe_with_top_market_cap.yaml  test_load_prices.yaml  test_scrape_wikipedia_tickers.yaml
tests/market/db/: conftest.py  test_database.py  test_models.py  test_scripts.py
tests/market_data/: test_alpaca_market_data.py  test_market_data.py  test_yahoo_market_data.py
tests/market_data/cassettes/: test_get_bars.yaml  test_load_prices.yaml
tests/optimiization/: test_constraints.py  test_objectives_map.py  test_solver.py
tests/optimiization/cassettes/: test_solver_financials.yaml  test_solver_financials_and_cvar.yaml  test_solver_min_num_assets.yaml
tests/utils/: __init__.py  test_utils.py
